(executable
  (name bbqcli)
  (modules bbqcli WLANThermo ThoCurl)
  (flags (:standard -w -K))
  (ocamlopt_flags (:standard -inline 32))
  (libraries unix yojson cmdliner))

(executable
  (name curltest)
  (modules curltest)
  (flags (:standard -w -K))
  (ocamlopt_flags (:standard -inline 32))
  (libraries curl yojson))
