(executable
  (name bbqcli)
  (modules bbqcli)
  (flags (:standard -w -K))
  (ocamlopt_flags (:standard -inline 32))
  (libraries curl yojson cmdliner WLANThermo))

(executable
  (name bbqd)
  (modules bbqd)
  (flags (:standard -w -K))
  (ocamlopt_flags (:standard -inline 32))
  (libraries curl yojson cmdliner WLANThermo))

(library
  (name WLANThermo)
  (modules Common WLANThermo ThoCurl Tabulate)
  (wrapped false)
  (flags (:standard -w -K))
  (ocamlopt_flags (:standard -inline 32))
  (libraries curl yojson cmdliner))
