(executable
  (name bbqcli)
  (public_name bbqcli)
  (modules Bbqcli)
  (flags (:standard -w -K))
  (ocamlopt_flags (:standard -inline 32))
  (libraries cmdliner wlanthermo))

(library
  (name wlanthermo)
  (public_name wlanthermo)
  (modules WLANThermo
           Recipe Recipe_syntax Recipe_parser Recipe_lexer
  	   ThoCurl ThoList ThoString ThoTime)
; (private_modules Recipe_syntax Recipe_parser Recipe_lexer)
  (wrapped false)
  (flags (:standard -w -K))
  (ocamlopt_flags (:standard -inline 32))
  (libraries curl yojson))

(documentation
 (mld_files index))

(ocamllex recipe_lexer)
(ocamlyacc recipe_parser)

;;; Use the ocaml functions instead of the table based automaton:
;;; (ocamllex ...) is hardcoded in dune_rules/dune_file.ml
;;; and there's no way to add the "-ml" option without
;;; redefining the rule.
; (rule
;   (target recipe_lexer.ml)
;   (deps   recipe_lexer.mll)
;   (action (chdir %{workspace_root}
;             (run %{bin:ocamllex} -ml -q -o %{target} %{deps}))))
;;; Anyway "[...] using it for production lexers is not recommended."

